--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "angular-oauth2-oidc-jwks": "^20.0.0",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
+    "twind": "^0.16.19",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
