--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,8 @@
     "@angular/forms": "^20.2.3",
     "@angular/platform-browser": "^20.2.3",
     "@angular/router": "^20.2.3",
+    "@twind/core": "^1.1.3",
+    "@twind/preset-tailwind": "^1.1.4",
     "angular-oauth2-oidc": "^20.0.2",
     "angular-oauth2-oidc-jwks": "^20.0.0",
     "rxjs": "~7.8.2",
